[package]
name = "bitsvec"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2021"
license = "MIT / Apache-2.0"
description = "A bit vector with the Rust standard library's portable SIMD API"
repository = "https://github.com/psiace/bitsvec"
documentation = "https://docs.rs/bitsvec"
keywords = ["bitvec", "bitmap", "vec", "simd", "data-structures"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "1.8", features = ["const_generics"] }

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3"
bit-vec = "0.6"
bitvec = "1.0.0"

[[bench]]
name = "comparison"
harness = false
