[package]
name = "bitsvec"
version = "0.1.1"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2021"
license = "MIT / Apache-2.0"
description = "A bit vector with the Rust standard library's portable SIMD API"
repository = "https://github.com/psiace/bitsvec"
documentation = "https://docs.rs/bitsvec"
keywords = ["bitvec", "bitmap", "vec", "simd", "data-structures"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "1.8", features = ["const_generics"] }

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3"
# for normal bench
bit-vec = "0.6"
bitvec = "1.0.0"
# for simd bench
wide = "0.7.4"
bitvec_simd = "0.15.0"
bitvector_simd = "0.2.2"

[[bench]]
name = "comparison"
harness = false
